# backend

./: .gitignore  Dockerfile  README.md  admin.sh  amazon.sh  backup.sh  build-docker-image.sh  createdb.py  download-html.sh  generate-jwt-key.sh  nginx-config  notes.md  pyproject.toml  reset-db.sh  run-docker-image.sh  start-prod.sh  start.sh
src/: admin.py  admin.sh  amadmin.sh  createdb.py  pyproject.toml
src/backend/: app.py  settings.py  util.py
src/backend/cli/: database.py  dev.py  html.py  main.py  settings.py
src/backend/database/: base.py  exceptions.py  memorydb.py  models.py  orm.py
src/backend/db/: database.py  exceptions.py  models.py  orm.py
src/backend/labels/: __init__.py
src/backend/restapi/: __init__.py  access.py  authentication.py  events.py  items.py  register.py  root.py  shared.py  user.py  users.py
src/backend/restapi/authentication/: __init__.py  login.py  register.py
src/backend/restapi/events/: __init__.py  addevent.py  genlabels.py  listevents.py  updateevent.py  user.py
src/backend/restapi/labels/: __init__.py  download.py  generate.py  status.py  (+1 more)
src/backend/security/: __init__.py  password.py  roles.py  scopes.py  tokens.py  validation.py
src/tests/: basic-tests.py  conftest.py  database-tests.py  fixture-tests.py  rest-api-tests.py  token-tests.py  util.py
src/tests/database/: db-event-tests.py  db-item-tests.py  db-user-tests.py  event-tests.py  user-tests.py
src/tests/rest/: login-tests.py  register-tests.py  rest-event-tests.py  rest-login-tests.py  rest-register-tests.py  rest-root-tests.py  rest-user-tests.py
(+61 files in other folders)
