[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Frederic Vogels <frederic.vogels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
pydantic = "^2.1.1"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = [
    "*-tests.py"
]
log_level = "INFO"
